// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderElement instance methods onChangeName should update state, call onChange prop 1`] = `
<FormElement
  errors={Array []}
  name="header_00c4498e-1c9e-4c26-aa7c-f81d13573129"
>
  <div
    className="header"
    data-spec="header-container"
  >
    <div
      className="header_name"
      data-spec="name-container"
    >
      <Connect(TextInputElement)
        name="name"
        onChange={[Function]}
        placeholder="Header Name"
        showInvalid={false}
        value="Content-Type"
      />
    </div>
    <div
      className="header_value"
      data-spec="value-container"
    >
      <Connect(TextInputElement)
        autocomplete={true}
        name="value"
        onChange={[Function]}
        placeholder="Value"
        value="application/json"
      />
    </div>
  </div>
</FormElement>
`;

exports[`HeaderElement instance methods onChangeValue should update state, call onChange prop 1`] = `
<FormElement
  errors={Array []}
  name="header_00c4498e-1c9e-4c26-aa7c-f81d13573129"
>
  <div
    className="header"
    data-spec="header-container"
  >
    <div
      className="header_name"
      data-spec="name-container"
    >
      <Connect(TextInputElement)
        name="name"
        onChange={[Function]}
        placeholder="Header Name"
        showInvalid={false}
        value="Content-Type"
      />
    </div>
    <div
      className="header_value"
      data-spec="value-container"
    >
      <Connect(TextInputElement)
        autocomplete={true}
        name="value"
        onChange={[Function]}
        placeholder="Value"
        value="application/json"
      />
    </div>
  </div>
</FormElement>
`;

exports[`HeaderElement render should render remove icon 1`] = `
<FormElement
  errors={Array []}
  name="header_00c4498e-1c9e-4c26-aa7c-f81d13573129"
>
  <div
    className="header"
    data-spec="header-container"
  >
    <div
      className="header_name"
      data-spec="name-container"
    >
      <Connect(TextInputElement)
        name="name"
        onChange={[Function]}
        placeholder="Header Name"
        showInvalid={false}
        value="Content-Type"
      />
    </div>
    <div
      className="header_value"
      data-spec="value-container"
    >
      <Connect(TextInputElement)
        autocomplete={true}
        name="value"
        onChange={[Function]}
        placeholder="Value"
        value="application/json"
      />
    </div>
    <div
      className="removeIco"
      data-spec="remove-icon"
      onClick={[Function]}
    >
      <span
        className="icn-remove"
      />
    </div>
  </div>
</FormElement>
`;

exports[`HeaderElement render should render self, children with base props 1`] = `
<FormElement
  errors={Array []}
  name="header_00c4498e-1c9e-4c26-aa7c-f81d13573129"
>
  <div
    className="header"
    data-spec="header-container"
  >
    <div
      className="header_name"
      data-spec="name-container"
    >
      <Connect(TextInputElement)
        name="name"
        onChange={[Function]}
        placeholder="Header Name"
        showInvalid={false}
        value="Content-Type"
      />
    </div>
    <div
      className="header_value"
      data-spec="value-container"
    >
      <Connect(TextInputElement)
        autocomplete={true}
        name="value"
        onChange={[Function]}
        placeholder="Value"
        value="application/json"
      />
    </div>
  </div>
</FormElement>
`;
